test/success/system/_test_imper_part.hs
main = do
       print 4
       print 5
       print 6.0
       print True
       print "hello"
       if True then print 4 else print 5
       do
        let x :: Int; x = 5
            y :: Double; y = 3.4
        print x