test/fail/integration/_fail_grammar_if_block_func_1.hs
x :: Int
x = if jl then 3 else 4
main = print "hello"